Negative Defense Modifier Created

--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="BuffAttackEffect.cpp" />
     <ClCompile Include="Combat.cpp" />
     <ClCompile Include="DebuffAttackEffect.cpp" />
+    <ClCompile Include="DebuffDefenseEffect.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="DiceAndSteel.cpp" />
     <ClCompile Include="GameEngine.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="BuffAttackEffect.h" />
     <ClInclude Include="Combat.h" />
     <ClInclude Include="DebuffAttackEffect.h" />
+    <ClInclude Include="DebuffDefenseEffect.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Player.h" />
