Defense Modifier Added

--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="DebuffDefenseEffect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BuffDefenseEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dice.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DebuffDefenseEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BuffDefenseEffect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
