Added Poison Effect Modifier

--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="BuffDefenseEffect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PoisonEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dice.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BuffDefenseEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PoisonEffect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
