--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="DiceAndSteel.cpp" />
     <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PoisonEffect.cpp" />
     <ClCompile Include="Resolution.cpp" />
     <ClCompile Include="StatusEffect.cpp" />
   </ItemGroup>
@@ -148,6 +149,7 @@
     <ClInclude Include="Dice.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PoisonEffect.h" />
     <ClInclude Include="Resolution.h" />
     <ClInclude Include="StatusEffect.h" />
     <ClInclude Include="TurnPhase.h" />
