Added Stun Effect Modifier

--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="PoisonEffect.cpp" />
     <ClCompile Include="Resolution.cpp" />
     <ClCompile Include="StatusEffect.cpp" />
+    <ClCompile Include="StunEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BuffAttackEffect.h" />
@@ -152,6 +153,7 @@
     <ClInclude Include="PoisonEffect.h" />
     <ClInclude Include="Resolution.h" />
     <ClInclude Include="StatusEffect.h" />
+    <ClInclude Include="StunEffect.h" />
     <ClInclude Include="TurnPhase.h" />
     <ClInclude Include="TurnSnapshot.h" />
   </ItemGroup>
