--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="PoisonEffect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StunEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dice.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PoisonEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StunEffect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
