--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Combat.cpp" />
     <ClCompile Include="DebuffAttackEffect.cpp" />
     <ClCompile Include="DebuffDefenseEffect.cpp" />
+    <ClCompile Include="DefenseBuffCard.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="DiceAndSteel.cpp" />
     <ClCompile Include="GameEngine.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="Combat.h" />
     <ClInclude Include="DebuffAttackEffect.h" />
     <ClInclude Include="DebuffDefenseEffect.h" />
+    <ClInclude Include="DefenseBuffCard.h" />
     <ClInclude Include="Dice.h" />
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Player.h" />
