--- a/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
+++ b/DiceAndSteel/DiceAndSteel/DiceAndSteel.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="DefenseBuffCard.cpp">
       <Filter>Cards</Filter>
     </ClCompile>
+    <ClCompile Include="AttackDebuffCard.cpp">
+      <Filter>Cards</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dice.h">
@@ -114,6 +117,9 @@
       <Filter>Cards</Filter>
     </ClInclude>
     <ClInclude Include="DefenseBuffCard.h">
+      <Filter>Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="AttackDebuffCard.h">
       <Filter>Cards</Filter>
     </ClInclude>
   </ItemGroup>
